@@ -31,7 +31,7 @@
             <child>
               <object class="GtkButton" id="cancel_button">
                 <property name="visible">True</property>
-                <property name="sensitive">False</property>
+                <property name="sensitive">True</property>
                 <property name="can_default">True</property>
                 <property name="can_focus">True</property>
                 <property name="label">gtk-cancel</property>
